# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1095 2009/12/08 14:56:25 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.5.0 beta1 (????/??/??)
 - (2009/12/08) Fixed bug#2153 - Recognize domain names only if they are words.
 - (2009/12/08) Fixed bug#4399 - Phone- / Email-Ticket AJAX reload does not
    consider ACL in Config.pm.
 - (2009/12/08) Fixed bug#4330 - Added new history-get results.
 - (2009/12/07) Fixed bug#3887 - Processing headers with faulty charset definitions.
 - (2009/12/04) Removed OptionElement() from Layout.pm. Use BuildSelection()
    instead.
 - (2009/12/04) Changed line chart library again: from OFC to Flot.
 - (2009/12/02) Completely removed YUI from the OTRS code.
 - (2009/12/02) Switched line chart on the dashboard from YUI to OFC.
 - (2009/11/27) Updated CPAN module XML::Parser::Lite to version 0.710.10.
 - (2009/11/27) Updated CPAN module XML::TreePP to version 0.39.
 - (2009/11/27) Updated CPAN module XML::FeedPP to version 0.41.
 - (2009/11/27) Updated CPAN module Text::Diff to version 1.37.
 - (2009/11/27) Updated CPAN module Text::CSV to version 1.15.
 - (2009/11/27) Updated CPAN module Authen::SASL to version 2.13.
 - (2009/11/27) changed directory structure for thirdparty javascript modules
 - (2009/11/27) switched AutoCompletion and Dialog from YUI to jQuery
 - (2009/11/25) switched to XHTML doctype
    - not all of the generated HTML is valid yet, but much
    - from now on, ";" will be used as a query parameter separator in URLs
        (old: index.pl?Action=AgentExample&Subaction=Test,
        new: index.pl?Action=AgentExample;Subaction=Test)
    - made some self-closing tags actually close themselves (e.g. <img .../>)
    - made some tags and attributes used lowercase